--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"dependencies": {
 		"i": "^0.3.7",
 		"npm": "^10.4.0",
-		"peerjs": "^1.5.2"
+		"peerjs": "^1.5.2",
+		"svelte-check": "^3.6.6"
 	}
 }
