--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"date-fns": "^3.3.1",
 		"i": "^0.3.7",
 		"npm": "^10.4.0",
 		"peerjs": "^1.5.2",
