--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"bits-ui": "^0.21.1",
+		"clsx": "^2.1.0",
 		"date-fns": "^3.3.1",
 		"i": "^0.3.7",
 		"npm": "^10.4.0",
 		"peerjs": "^1.5.2",
-		"svelte-check": "^3.6.6"
+		"svelte-check": "^3.6.6",
+		"tailwind-merge": "^2.2.2",
+		"tailwind-variants": "^0.2.1"
 	}
 }
