--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"preview": "vite preview"
 	},
 	"devDependencies": {
+		"@iconify/svelte": "^4.0.1",
 		"@svelte-put/qr": "^1.0.3",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
@@ -24,9 +25,11 @@
 		"clsx": "^2.1.0",
 		"date-fns": "^3.3.1",
 		"i": "^0.3.7",
+		"lucide-svelte": "^0.364.0",
 		"npm": "^10.4.0",
 		"peerjs": "^1.5.2",
 		"svelte-check": "^3.6.6",
+		"svelte-sonner": "^0.3.22",
 		"tailwind-merge": "^2.2.2",
 		"tailwind-variants": "^0.2.1"
 	}
