--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"date-fns": "^3.3.1",
 		"i": "^0.3.7",
 		"lucide-svelte": "^0.364.0",
+		"mixpanel-browser": "^2.50.0",
 		"npm": "^10.4.0",
 		"peerjs": "^1.5.2",
 		"svelte-check": "^3.6.6",
