--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@tailwindcss/line-clamp": "^0.4.4",
 		"autoprefixer": "^10.4.18",
 		"postcss": "^8.4.35",
 		"svelte": "^4.2.7",
